--- a/Frontend/Centro-Escolar/package.json
+++ b/Frontend/Centro-Escolar/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.1",
+    "jquery": "^3.7.0",
     "material-icons": "^1.13.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
